src/objects/copado__Git_Commit__c.object
<CustomObject>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Changes__c</fullName>
        <label>Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Date__c</fullName>
        <label>Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Commit Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Commit_Message__c</fullName>
        <label>Commit Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Git Commits</relationshipLabel>
        <relationshipName>Git_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Git Commit</label>
    <listViews>
        <fullName>Release_Engineers_Git_Commit</fullName>
        <filterScope>Queue</filterScope>
        <label>Release Engineers</label>
        <queue>Release_Engineers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Commit-{0000}</displayFormat>
        <label>Git Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>